--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <Button
-        android:id="@+id/btnAddStudent"
+    <EditText
+        android:id="@+id/studentIdInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_student"
-        android:layout_marginHorizontal="24dp" />
+        android:hint="Enter Student ID"
+        android:inputType="text" />
 
     <Button
-        android:id="@+id/btnMarkAttendance"
+        android:id="@+id/scanButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/mark_attendance"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="24dp" />
+        android:text="Scan QR Code" />
+
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login to View History" />
 </LinearLayout>
